# minimalpy

./: CMakeLists.txt  math_module.h  tests.py  tinypy.bytecode.h  tinypy.cpp  tinypy.h  tinypy.py
